// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should MovieItem render correctly With trailer 1`] = `
<article
  className="small-movie-card catalog__movies-card"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <a
    className="small-movie-card__link"
    href="/films/1"
    onClick={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <video
        autoPlay={true}
        height="175"
        muted={true}
        poster="test"
        src="test"
        width="280"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      test
    </h3>
  </a>
</article>
`;

exports[`Should MovieItem render correctly Without trailer 1`] = `
<article
  className="small-movie-card catalog__movies-card"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <a
    className="small-movie-card__link"
    href="/films/1"
    onClick={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="test"
        height="175"
        src="test"
        width="280"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      test
    </h3>
  </a>
</article>
`;
